--- a/善行伴侣项目最终文档.md
+++ b/善行伴侣项目最终文档.md
@@ -6,7 +6,7 @@
 **善行伴侣 (Kindness Companion)**
 
 ### 1.2 项目简介
-善行伴侣是一个旨在通过技术传递善意、鼓励用户实践并反思日常善行的桌面应用程序。本项目参与"代码有温度——用软件守护每一份善意"竞赛，采用API优先策略实现AI功能，确保最佳的可移植性和打包便利性。
+善行伴侣是一个旨在通过技术传递善意、鼓励用户实践并反思日常善行的桌面应用程序。
 
 项目核心理念包括：
 - **鼓励实践**：提供易于参与的善行挑战，将善意融入日常
@@ -16,10 +16,19 @@
 - **尊重隐私**：将用户数据安全和隐私保护放在首位
 
 ### 1.3 项目成员及分工
-**开发者**：南京大学 [nju-zym](https://github.com/nju-zym)
-- **全栈开发**：负责前端界面设计、后端逻辑实现、AI功能集成
-- **架构设计**：系统架构设计、模块化开发、API集成
-- **测试与部署**：单元测试、集成测试、应用打包
+**开发者**：
+钟一鸣 [nju-zym](https://github.com/nju-zym)
+- 负责项目整体技术架构设计与实现
+- 后端开发（数据库管理、用户认证、进度追踪等）
+- 前端界面开发（主窗口及各子界面UI设计与交互逻辑实现）
+- AI核心功能集成（对话生成、情感分析、报告生成等）
+- 单元测试工作，确保应用功能的稳定性和可靠性。
+张鑫 [super-xinz](https://github.com/super-xinz)
+- 负责项目文档撰写与整理（README.md等技术文档编写，记录项目进展与技术细节）
+- 测试与优化（组织GUI组件测试、集成测试、用户体验测试，收集反馈并优化界面设计与交互流程）
+- 项目协调与沟通（协调团队成员分工，与指导老师、评委沟通汇报项目进展，确保项目按计划推进）
+
+
 
 ### 1.4 项目参考资料
 #### 心理学理论基础
@@ -71,6 +80,7 @@ pip install -r requirements.txt
 # 创建config.py文件，配置ZhipuAI API密钥
 cp config_template.py config.py
 # 编辑config.py，填入您的API密钥
+# 项目中已经存在api
 
 # 5. 运行应用
 python kindness_companion_app/main.py
@@ -147,62 +157,92 @@ python kindness_companion_app/main.py
 
 ```
 kindness-companion/
-├── kindness_companion_app/          # 主应用目录
-│   ├── main.py                      # 应用启动入口
-│   ├── frontend/                    # 前端UI模块
-│   │   ├── main_window.py          # 主窗口
-│   │   ├── user_auth.py            # 用户认证界面
-│   │   ├── challenge_ui.py         # 挑战浏览界面
-│   │   ├── checkin_ui.py           # 打卡记录界面
-│   │   ├── progress_ui.py          # 进度报告界面
-│   │   ├── profile_ui.py           # 个人设置界面
-│   │   ├── pet_ui.py               # AI宠物交互界面
-│   │   └── widgets/                # 自定义控件
-│   ├── backend/                     # 后端逻辑模块
-│   │   ├── database_manager.py     # 数据库管理
-│   │   ├── user_manager.py         # 用户管理
-│   │   ├── challenge_manager.py    # 挑战管理
-│   │   ├── progress_tracker.py     # 进度追踪
-│   │   ├── reminder_scheduler.py   # 提醒调度
-│   │   └── utils.py                # 工具函数
-│   ├── ai_core/                     # AI核心功能模块
-│   │   ├── api_client.py           # API客户端封装
-│   │   ├── dialogue_generator.py   # 对话生成
-│   │   ├── emotion_analyzer.py     # 情感分析
-│   │   ├── pet_handler.py          # 宠物交互处理
-│   │   └── report_generator.py     # 报告生成
-│   ├── api/                         # 自建后端API（未来功能）
-│   ├── resources/                   # 应用资源
-│   │   ├── icons/                  # 图标资源
-│   │   ├── fonts/                  # 字体资源
-│   │   ├── styles/                 # 样式表
-│   │   ├── animations/             # 动画资源
-│   │   └── images/                 # 图片资源
-│   └── tests/                      # 测试代码
-├── frontend/widgets/               # 额外的前端组件
-├── config.py                       # 配置文件
-├── requirements.txt                # 依赖列表
+├── .gitattributes                  # Git属性文件
+├── .gitignore                      # Git忽略文件
 ├── README.md                       # 项目说明
-└── 项目文档/                      # 项目文档集合
-    ├── activeContext.md
-    ├── AI特色介绍文档.md
-    ├── productContext.md
-    ├── progress.md
-    ├── PROJECT_PROGRESS.md
-    ├── projectbrief.md
-    ├── systemPatterns.md
-    └── techContext.md
+├── 善行伴侣项目最终文档.md             # 本项目文档
+├── docs/                           # 其他文档目录
+│   ├── activeContext.md
+│   ├── AI特色介绍文档.md
+│   ├── productContext.md
+│   ├── progress.md
+│   ├── PROJECT_PROGRESS.md
+│   ├── projectbrief.md
+│   ├── README.md
+│   ├── systemPatterns.md
+│   ├── techContext.md
+│   └── test_report.md
+└── kindness_companion_app/          # 主应用目录
+    ├── main.py                      # 应用启动入口
+    ├── config.py                    # 应用配置文件
+    ├── requirements.txt             # 应用依赖列表
+    ├── ai_core/                     # AI核心功能模块
+    │   ├── __init__.py
+    │   ├── models/                 # AI模型相关 (e.g., README.md)
+    │   ├── api_client.py           # API客户端封装
+    │   ├── conversation_analyzer.py # 对话分析器
+    │   ├── dialogue_generator.py   # 对话生成
+    │   ├── emotion_analyzer.py     # 情感分析
+    │   ├── pet_handler.py          # 宠物交互处理
+    │   └── report_generator.py     # 报告生成
+    ├── api/                         # 自建后端API (未来功能, e.g., app.py)
+    │   ├── __init__.py
+    │   └── ...                     # (ai_handler.py, community_handler.py etc.)
+    ├── backend/                     # 后端逻辑模块
+    │   ├── __init__.py
+    │   ├── database_manager.py     # 数据库管理
+    │   ├── user_manager.py         # 用户管理
+    │   ├── challenge_manager.py    # 挑战管理
+    │   ├── progress_tracker.py     # 进度追踪
+    │   ├── reminder_scheduler.py   # 提醒调度
+    │   ├── wall_manager.py         # 善意墙管理
+    │   └── utils.py                # 工具函数
+    ├── frontend/                    # 前端UI模块
+    │   ├── __init__.py
+    │   ├── icons/                  # 前端特定图标 (e.g., chevron-right.svg)
+    │   ├── widgets/                # 自定义控件 (e.g., ai_consent_dialog.py)
+    │   │   ├── __init__.py
+    │   │   └── ...                 # (various custom widget .py files)
+    │   ├── main_window.py          # 主窗口
+    │   ├── user_auth.py            # 用户认证界面
+    │   ├── challenge_ui.py         # 挑战浏览界面
+    │   ├── checkin_ui.py           # 打卡记录界面
+    │   ├── community_ui.py         # 社区界面
+    │   ├── progress_ui.py          # 进度报告界面
+    │   ├── profile_ui.py           # 个人设置界面
+    │   ├── pet_ui.py               # AI宠物交互界面
+    │   ├── theme_manager.py        # 主题管理器
+    │   ├── resources.qrc           # Qt资源文件
+    │   └── styles.qss              # QSS样式表
+    ├── logs/                        # 日志文件目录
+    ├── resources/                   # 应用资源
+    │   ├── animations/             # 动画资源 (GIFs)
+    │   ├── feather-4.29.0/         # Feather图标库
+    │   │   └── icons/              # (大量 .svg 图标)
+    │   │   └── ...
+    │   ├── fonts/                  # 字体资源
+    │   ├── icons/                  # 通用图标资源 (app_icon.png, .svg)
+    │   ├── images/                 # 图片资源 (profilePicture.png)
+    │   ├── styles/                 # QSS样式文件 (dark/light themes)
+    │   ├── resources_rc.py         # 编译后的Qt资源
+    │   └── resources.qrc           # Qt资源定义文件 (此文件可能在frontend或此处，根据实际情况调整)
+    └── tests/                       # 测试代码
+        ├── __init__.py
+        ├── conftest.py               # Pytest配置文件
+        ├── pytest.ini                # Pytest配置
+        ├── requirements-test.txt     # 测试依赖
+        ├── README.md                 # 测试说明
+        ├── run_tests.py              # 测试运行脚本
+        ├── test_ai_core/           # AI核心测试 (包含各模块测试.py)
+        ├── test_api/               # API测试
+        ├── test_backend/           # 后端测试 (包含各模块测试.py)
+        ├── test_frontend/          # 前端测试 (包含各UI模块测试.py)
+        └── ...                     # (其他顶层测试文件如 test_main.py)
 ```
 
 ### 4.2 模块概要
 
 #### 系统架构图
-
-> **注意**：由于Markdown在某些环境下对Mermaid图表的支持可能不完整，建议使用以下方式查看完整的架构图：
->
-> 1. **使用支持Mermaid的编辑器**：如Visual Studio Code + Mermaid Preview插件、Typora、GitHub/GitLab在线预览
-> 2. **在线Mermaid编辑器**：访问 https://mermaid.live/ 复制下方代码查看
-> 3. **导出为图片**：使用Mermaid CLI工具或在线工具导出为PNG/SVG格式
 
 ```mermaid
 graph LR
@@ -218,6 +258,9 @@ graph LR
             A6[设置界面<br/>Profile UI]
             A7[AI宠物界面<br/>Pet UI]
             A8[自定义控件<br/>Widgets]
+            A9[社区界面<br/>Community UI]
+            A10[提醒界面<br/>Reminder UI]
+            A11[主题管理<br/>Theme Manager]
         end
 
         subgraph "业务逻辑层"
@@ -227,6 +270,7 @@ graph LR
             B4[进度追踪<br/>Progress Tracker]
             B5[提醒调度<br/>Reminder Scheduler]
             B6[墙管理<br/>Wall Manager]
+            B7[同步管理<br/>Sync Manager]
         end
 
         subgraph "数据存储层"
@@ -241,6 +285,9 @@ graph LR
             D3[情感分析<br/>Emotion Analyzer]
             D4[宠物处理<br/>Pet Handler]
             D5[报告生成<br/>Report Generator]
+            D6[对话分析<br/>Conversation Analyzer]
+            D7[推荐引擎<br/>Recommendation Engine]
+            D8[游戏化优化<br/>Gamification Optimizer]
         end
 
         subgraph "外部服务"
@@ -253,17 +300,14 @@ graph LR
             F2[字体资源<br/>Fonts]
             F3[样式资源<br/>Styles]
             F4[动画资源<br/>Animations]
+            F5[Qt资源<br/>QRC Files]
         end
     end
 
     %% 连接关系
-    A1 --> A2
-    A1 --> A3
-    A1 --> A4
-    A1 --> A5
-    A1 --> A6
-    A1 --> A7
+    A1 --> A2; A1 --> A3; A1 --> A4; A1 --> A5; A1 --> A6; A1 --> A7; A1 --> A9; A1 --> A10
     A7 --> A8
+    A11 --> A1; A11 --> A2; A11 --> A3; A11 --> A4; A11 --> A5; A11 --> A6; A11 --> A7; A11 --> A8; A11 --> A9; A11 --> A10
 
     A2 --> B2
     A3 --> B3
@@ -271,26 +315,30 @@ graph LR
     A5 --> B4
     A6 --> B2
     A7 --> D4
+    %% 社区UI 与 墙管理交互
+    A9 --> B6
+    %% 提醒UI 与 提醒调度交互
+    A10 --> B5
 
     B1 --> C1
-    B2 --> B1
+    %% 用户管理也可能触发同步
+    B2 --> B1; B2 --> B7
     B3 --> B1
     B4 --> B1
-    B5 --> B1
+    %% 提醒调度也连接系统通知
+    B5 --> B1; B5 --> E2
     B6 --> B1
+    %% 同步管理主要操作数据库
+    B7 --> B1
 
     D1 --> E1
-    D2 --> D1
-    D3 --> D1
-    D4 --> D2
-    D4 --> D3
-    D5 --> D1
+    D2 --> D1; D3 --> D1; D5 --> D1; D6 --> D1; D7 --> D1; D8 --> D1
+    %% 宠物处理可能调用多种AI能力
+    D4 --> D2; D4 --> D3; D4 --> D6; D4 --> D7; D4 --> D8
 
-    B5 --> E2
-
-    A1 --> F1
-    A1 --> F2
-    A1 --> F3
+    %% 资源模块连接 (主要被前端使用)
+    A1 --> F1; A1 --> F2; A1 --> F3; A1 --> F5
+    %% AI宠物使用动画
     A7 --> F4
 
     %% 样式定义
@@ -301,63 +349,13 @@ graph LR
     classDef external fill:#fce4ec,stroke:#880e4f,stroke-width:2px
     classDef resource fill:#f1f8e9,stroke:#33691e,stroke-width:2px
 
-    class A1,A2,A3,A4,A5,A6,A7,A8 frontend
-    class B1,B2,B3,B4,B5,B6 backend
+    class A1,A2,A3,A4,A5,A6,A7,A8,A9,A10,A11 frontend
+    class B1,B2,B3,B4,B5,B6,B7 backend
     class C1,C2,C3 data
-    class D1,D2,D3,D4,D5 ai
+    class D1,D2,D3,D4,D5,D6,D7,D8 ai
     class E1,E2 external
-    class F1,F2,F3,F4 resource
+    class F1,F2,F3,F4,F5 resource
 ```
-
-#### 手动绘制架构图指南
-
-如果无法显示上述Mermaid图表，可以使用以下工具手动绘制：
-
-1. **绘图工具推荐**：
-   - **draw.io (diagrams.net)**：免费在线绘图工具，支持导出多种格式
-   - **Lucidchart**：专业的图表制作工具
-   - **Visio**：Microsoft的专业绘图软件
-   - **Figma**：现代化的设计工具，支持协作
-
-2. **绘制步骤**：
-   - 创建6个主要分组框：前端展示层、业务逻辑层、数据存储层、AI核心层、外部服务、资源模块
-   - 在每个分组内添加对应的子模块
-   - 使用箭头连接各模块间的依赖关系
-   - 使用不同颜色区分不同层次的模块
-
-3. **布局建议**：
-   ```
-   ┌─────────────────────────────────────────────────────────────┐
-   │                    前端展示层                                │
-   │  [主窗口] [认证] [挑战] [打卡] [进度] [设置] [AI宠物] [控件]   │
-   └─────────────────────┬───────────────────────────────────────┘
-                        │
-   ┌─────────────────────┴───────────────────────────────────────┐
-   │                   业务逻辑层                                 │
-   │  [数据库管理] [用户管理] [挑战管理] [进度追踪] [提醒调度]      │
-   └─────────────────────┬───────────────────┬───────────────────┘
-                        │                   │
-   ┌─────────────────────┴─────────┐    ┌───┴─────────────────────┐
-   │       数据存储层               │    │      AI核心层            │
-   │  [SQLite] [配置] [日志]        │    │ [API客户端] [对话生成]   │
-   └───────────────────────────────┘    │ [情感分析] [宠物处理]    │
-                                       │ [报告生成]              │
-                                       └─────────┬───────────────┘
-                                                │
-                                       ┌─────────┴───────────────┐
-                                       │      外部服务            │
-                                       │  [ZhipuAI] [系统通知]    │
-                                       └─────────────────────────┘
-   ```
-
-4. **配色方案**：
-   - 前端展示层：浅蓝色 (#e1f5fe)
-   - 业务逻辑层：浅紫色 (#f3e5f5)
-   - 数据存储层：浅绿色 (#e8f5e8)
-   - AI核心层：浅橙色 (#fff3e0)
-   - 外部服务：浅粉色 (#fce4ec)
-   - 资源模块：浅黄绿色 (#f1f8e9)
-
 ### 4.3 Frontend Layer（前端层）
 **职责**：用户界面展示和交互处理
 **功能**：
@@ -466,26 +464,22 @@ graph LR
 ### 6.1 当前不足之处
 
 #### 功能完整性
-- **社区功能缺失**：匿名善意墙等社区互动功能尚未实现
 - **离线功能有限**：AI功能完全依赖网络连接，无离线降级方案
 - **个性化程度不够**：AI推荐和激励机制还不够智能化
 
 #### 技术优化空间
 - **性能优化**：大量数据加载时可能出现卡顿
 - **错误处理**：某些边缘情况的错误处理不够完善
-- **测试覆盖率**：UI测试和集成测试覆盖率有待提高
 
 #### 用户体验
 - **功能引导**：新用户引导流程不够友好
 - **反馈机制**：用户操作反馈不够及时明确
-- **多平台适配**：Windows和Linux平台的适配需要进一步优化
 
 ### 6.2 未来发展展望
 
 #### 短期目标（1-2个月）
 1. **完善UI设计**
    - 实现完整的温暖主题样式
-   - 优化深色模式适配
    - 提升界面交互流畅度
 
 2. **增强AI能力**
@@ -500,12 +494,10 @@ graph LR
 
 #### 中期目标（3-6个月）
 1. **社区功能开发**
-   - 实现匿名善意墙功能
    - 添加用户互动和分享机制
    - 集成内容审核和安全措施
 
 2. **跨平台扩展**
-   - 完善Windows和Linux平台支持
    - 探索移动端应用开发
    - 实现跨设备数据同步
 
@@ -557,6 +549,4 @@ graph LR
 
 ---
 
-*文档版本：v1.0*
-*最后更新：2024年3月*
 *项目地址：https://github.com/nju-zym/kindness-companion*
